feat: add some basic html niceties to index.html

--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,9 @@
-<html>
+<!doctype html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8" />
+    <title>TrainWatch</title>
+  </head>
   <script src="/static/htmx-1.9.9.js"></script>
   <body>
     <p>Hello, world!</p>
